<resources>
    <string name="app_name">GameCaro</string>
    <string name="title">CARO GAME</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_bucky">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register">Register</string>
    <string name="points">Points: %1$d</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>

    <string name="check_input">Please check your input.</string>
    <string name="password_incorrect">Password is incorrect</string>
    <string name="dialog_waiting_player">A random player is waiting for you</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="denied_request">Sorry, he/she denied your request</string>
    <string name="fight_now">Fight, now!</string>
    <string name="send_a_request">Send he/she a request?</string>
    <string name="cannot_send_a_request">Can not invite</string>
    <string name="dialog_cancel_message">The game is playing. Do you really want to lose?</string>
    <string name="toast_you_win_after_leave_room">Oops. He/She leaves your room. You win</string>
    <string name="you_are_playing">You are playing</string>
</resources>
